--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -1,6 +1,8 @@
 @import "home/_home.scss";
 @import "select-template/_select-template.scss";
 @import "shared/overlay.scss";
+@import "login/login.scss";
+@import "user-register/_user-register.scss";
 
 .c-app {
     position: relative;
