--- a/resources/styles/select-template/_select-template.scss
+++ b/resources/styles/select-template/_select-template.scss
@@ -38,7 +38,7 @@ div.select-template {
             button.select-button {
                 visibility: hidden;
                 border: 1px solid white;
-                padding: 8px 16px;
+                padding: 0;
                 font-weight: bold;
                 background-color: rgba(255, 255, 255, 0);
                 color: white;
