--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -7,18 +7,28 @@
 
 .c-app {
     position: relative;
-    height: 100vh;
+    // height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 
-.c-wrapper {
-    max-width: 1320px;
-    min-width: 1320px;
+div.c-wrapper {
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
+    height: 100%;
 }
 
-.c-wrapper--with-navbar {
+div.c-wrapper .c-body {
+    flex: 1;
+}
+
+div.c-wrapper--with-navbar {
     margin-left: 200px;
-    height: 100%;
+    height: 100vh;
     position: relative;
+}
+
+div.c-wrapper--with-navbar .c-body {
+    overflow: auto;
 }
