--- a/resources/styles/shared/_global.scss
+++ b/resources/styles/shared/_global.scss
@@ -6,6 +6,25 @@ h1, h2, h3, h4, h5, h6{
     font-weight: 700;
 }
 
+:root{
+    --textColor: #222222;
+    --rowSpace: 110px;
+    --rowSpace2: 100px;
+}
+
+@media(max-width: 1200px){
+    :root{
+        --rowSpace: 80px;
+        --rowSpace2: 70px;
+    }
+}
+@media(max-width: 767px){
+    :root{
+        --rowSpace: 50px;
+        --rowSpace2: 40px;
+    }
+}
+
 .full-width{
     width: 100vw;
     margin-left: calc(50% - 50vw);
