add style select page

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -19,6 +19,8 @@
     margin: 0;
     overflow-x: hidden;
     color: var(--textColor);
+    font-size: var(--fontSize);
+    font-weight: var(--fontWeight);
 }
 
 div.c-wrapper {
