--- a/resources/styles/shared/_global.scss
+++ b/resources/styles/shared/_global.scss
@@ -10,6 +10,7 @@ h1, h2, h3, h4, h5, h6{
     --textColor: #222222;
     --rowSpace: 110px;
     --rowSpace2: 100px;
+    --fontSize: 20px;
 }
 
 @media(max-width: 1200px){
