--- a/resources/styles/select-template/_detail.scss
+++ b/resources/styles/select-template/_detail.scss
@@ -12,18 +12,67 @@ div.template-detail {
         }
         .form-group {
             border-bottom: 1px solid #dddddd;
-            padding: 0 60px 15px;
-            margin: 0 0 15px 0;
+            padding: 0 60px 20px;
+            margin: 0 0 20px 0;
+            &:last-child{
+                margin-bottom: 0;
+                border: none;
+            }
             & > label{
                 font-size: 1.8rem;
                 font-weight: 700;
+                margin-bottom: 10px;
+                line-height: 1;
+            }
+            .form-control {
+                border-color: var(--textColor);
+                border-radius: 0;
+                padding: 0 15px;
+                line-height: 28px;
+                font-size: 1.4rem;
+            }
+            .group-radio{
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+            }
+            .form-check{
+                margin: 0 25px 0 0;
+                padding: 0;
+                line-height: 1;
+                .form-check-input{
+                    margin: 0;
+                    padding: 0;
+                    border-color: var(--textColor);
+                    &:checked{
+                        background-color: #fff;
+                        &:before{
+                            transform: scale(1);
+                        }
+                    }
+                    &:before{
+                        content: "";
+                        width: 12px;
+                        height: 12px;
+                        background: #000;
+                        border-radius: 50%;
+                        transform: scale(0);
+                        display: block;
+                        margin: 3px;
+                    }
+                }
+                .form-check-label{
+                    padding-left: 35px;
+                }
+            }
+            .custom-file-upload {
+                background: var(--textColor);
+                padding: 16px 55px;
+                color: #ffffff;
+                margin: 0;
+                cursor: pointer;
             }
         }
-
-        .form-group label {
-            margin-bottom: 5px;
-        }
-
         input[type="file"] {
             display: none;
         }
