--- a/resources/styles/shared/_global.scss
+++ b/resources/styles/shared/_global.scss
@@ -6,11 +6,16 @@ h1, h2, h3, h4, h5, h6{
     font-weight: 700;
 }
 
+*{
+    outline: none;
+}
+
 :root{
     --textColor: #222222;
     --rowSpace: 110px;
     --rowSpace2: 100px;
     --fontSize: 20px;
+    --fontWeight: 400;
 }
 
 @media(max-width: 1200px){
