--- a/resources/styles/select-template/_select-template.scss
+++ b/resources/styles/select-template/_select-template.scss
@@ -2,18 +2,25 @@ div.select-template {
     &__template-list {
         display: grid;
         grid-template-columns: auto auto;
-        @media (min-width: 1200px) {
-            grid-template-columns: auto auto auto auto;
-        }
         grid-gap: 50px;
         margin-bottom: var(--rowSpace);
+        @media (min-width: 1200px) {
+            grid-template-columns: auto auto auto auto;
+            row-gap: 100px;
+        }
+        @media (max-width: 1024px) {
+            grid-gap: 30px;
+        }
+        @media (max-width: 560px) {
+            grid-template-columns: auto;
+        }
     }
 
     &__cover {
         position: relative;
         margin-bottom: var(--rowSpace);
         .template-image{
-            background: no-repeat center/cover;
+            background: var(--bgFirstScreen) no-repeat center/cover;
             background-image: url("https://i.kym-cdn.com/entries/icons/original/000/035/699/pepe.jpg");
             padding-top: 34%;
         }
@@ -22,6 +29,17 @@ div.select-template {
             padding: 35px 60px;
             border: 2px solid #ffffff;
             line-height: 1;
+            text-align: center;
+            max-width: 535px;
+            @media (max-width: 1024px) {
+                font-size: 3rem;
+                padding: 25px 30px;
+                line-height: 1.1;
+            }
+            @media (max-width: 767px) {
+                font-size: 1.5rem;
+                padding: 15px;
+            }
         }
     }
 
@@ -29,7 +47,7 @@ div.select-template {
         position: relative;
         width: 100%;
         .template-image{
-            background: no-repeat center/cover;
+            background: var(--bgFirstScreen) no-repeat center/cover;
             padding-top: 150%;
         }
 
@@ -50,6 +68,11 @@ div.select-template {
                 a {
                     color: #ffffff;
                     text-decoration: none;
+                }
+                @media(max-width: 1400px){
+                    padding: 10px 20px;
+                    line-height: 1.1;
+                    max-width: 80%;
                 }
             }
         }
