--- a/resources/styles/shared/_global.scss
+++ b/resources/styles/shared/_global.scss
@@ -16,12 +16,21 @@ h1, h2, h3, h4, h5, h6{
     --rowSpace2: 100px;
     --fontSize: 20px;
     --fontWeight: 400;
+    --paddingFullWidth: 160px;
+    --bgFirstScreen: #eeeeee;
+    --bgFooter: #222222;
+    --txtFooter: #ffffff;
 }
 
 @media(max-width: 1200px){
     :root{
         --rowSpace: 80px;
         --rowSpace2: 70px;
+    }
+}
+@media(max-width: 1024px){
+    :root{
+        --paddingFullWidth: 30px;
     }
 }
 @media(max-width: 767px){
@@ -35,4 +44,7 @@ h1, h2, h3, h4, h5, h6{
     width: 100vw;
     margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
+    &--padding{
+        padding: 0 var(--paddingFullWidth);
+    }
 }
