--- a/resources/styles/admin-app/_admin-app.scss
+++ b/resources/styles/admin-app/_admin-app.scss
@@ -1,7 +1,7 @@
 div.c-wrapper .c-body {
     padding: 20px;
 
-    .c-main {
+    .c-admin-main {
         border: 1px solid #dbd2d2ee;
         border-radius: 5px;
         padding: 20px 10px;
