update style poster

--- a/resources/styles/admin-app/_admin-app.scss
+++ b/resources/styles/admin-app/_admin-app.scss
@@ -1,6 +1,9 @@
 div.c-wrapper .c-body {
-
-    .c-main {
+    
+    .c-admin-main {
+        border: 1px solid #dbd2d2ee;
+        border-radius: 5px;
+        padding: 20px 10px;
 
         .c-header {
             border-bottom: 1px solid #eeee;
