--- a/storage/app/public/template/meo.html
+++ b/storage/app/public/template/meo.html
@@ -3,7 +3,13 @@
         <div class="poster__pet-type js-data-bind" data-field="pet-type" data-label="ペットの種類" data-type="radio" data-options="犬,猫,鳥">犬</div>
         <div>
             <div class="poster__text-looking">探しています!</div>
-            <div class="poster__datetime js-data-bind" data-field="datetime" data-label="行方が分からなくなった日時" data-type="datetime">2017年9月10日 14時00分頃</div>
+            <div class="poster__datetime js-data-bind" data-field="datetime-lost" data-label="行方が分からなくなった日時" data-type="datetime">
+                2017<span>年</span>
+                9<span>月</span>
+                10<span>日</span>
+                14<span>時</span>
+                00<span>分頃</span>
+            </div>
             <div class="poster__lost-place js-data-bind" data-field="lost-place" data-label="行方が分からなくなった場所" data-type="input">渋谷区</div>
         </div>
     </section>
