--- a/resources/styles/select-template/_detail.scss
+++ b/resources/styles/select-template/_detail.scss
@@ -2,18 +2,31 @@ div.template-detail {
     &__box {
         padding: 0 15px;
         margin: 0;
+        @media(max-width: 1400px){
+            padding: 0;
+        }
     }
 
     &__form {
         padding: 0;
+        @media(max-width: 1400px){
+            margin-bottom: 50px;
+        }
         #formGenerate{
             border: 2px solid #dddddd;
             padding: 40px 90px;
+            margin: 0;
+            @media(max-width: 1400px){
+                padding: 40px 20px;
+            }
         }
         .form-group {
             border-bottom: 1px solid #dddddd;
             padding: 0 60px 20px;
             margin: 0 0 20px 0;
+            @media(max-width: 1400px){
+                padding: 0 20px 20px;
+            }
             &:last-child{
                 margin-bottom: 0;
                 border: none;
@@ -30,6 +43,10 @@ div.template-detail {
                 padding: 0 15px;
                 line-height: 28px;
                 font-size: 1.4rem;
+                @media(max-width: 480px){
+                    width: 100%;
+                    max-width: 100%;
+                }
             }
             .group-radio{
                 display: flex;
@@ -80,6 +97,30 @@ div.template-detail {
 
     &__sample {
         padding: 0 90px;
+        position: relative;
+        padding-bottom: 310px;
+        @media(max-width: 1400px){
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .c-actions{
+            background-color: #eeeeee;
+            position:absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            padding: 75px 0;
+            button{
+                padding: 15px 50px;
+                font-size: 20px;
+                border: none;
+                border-radius: 0;
+            }
+        }
+        .template-content__wrapper{
+            max-width: 100%;
+            overflow: auto;
+        }
     }
 
 }
