--- a/resources/styles/shared/_global.scss
+++ b/resources/styles/shared/_global.scss
@@ -22,6 +22,25 @@ h1, h2, h3, h4, h5, h6{
     --txtFooter: #ffffff;
 }
 
+h1, .h1 {
+    font-size:3rem
+}
+h2, .h2 {
+ font-size:2.5rem
+}
+h3, .h3 {
+ font-size:2.25rem
+}
+h4, .h4 {
+ font-size:2rem
+}
+h5, .h5 {
+ font-size:1.75rem
+}
+h6, .h6 {
+ font-size:1.5rem
+}
+
 @media(max-width: 1200px){
     :root{
         --rowSpace: 80px;
