--- a/resources/styles/shared/_global.scss
+++ b/resources/styles/shared/_global.scss
@@ -1,4 +1,4 @@
-html{
+html:not(.admin-page){
     font-size: 10px;
 }
 
@@ -26,19 +26,19 @@ h1, .h1 {
     font-size:3rem
 }
 h2, .h2 {
- font-size:2.5rem
+    font-size:2.5rem
 }
 h3, .h3 {
- font-size:2.25rem
+    font-size:2.25rem
 }
 h4, .h4 {
- font-size:2rem
+    font-size:2rem
 }
 h5, .h5 {
- font-size:1.75rem
+    font-size:1.75rem
 }
 h6, .h6 {
- font-size:1.5rem
+    font-size:1.5rem
 }
 
 @media(max-width: 1200px){
