--- a/resources/styles/select-template/_detail.scss
+++ b/resources/styles/select-template/_detail.scss
@@ -32,7 +32,7 @@ div.template-detail {
                 border: none;
             }
             & > label{
-                font-size: 1.8rem;
+                font-size: 18px;
                 font-weight: 700;
                 margin-bottom: 10px;
                 line-height: 1;
@@ -42,7 +42,7 @@ div.template-detail {
                 border-radius: 0;
                 padding: 0 15px;
                 line-height: 28px;
-                font-size: 1.4rem;
+                font-size: 14px;
                 @media(max-width: 480px){
                     width: 100%;
                     max-width: 100%;
