--- a/resources/styles/select-template/_select-template.scss
+++ b/resources/styles/select-template/_select-template.scss
@@ -25,19 +25,19 @@ div.select-template {
             padding-top: 34%;
         }
         .center-text{
-            font-size: 3.6rem;
+            font-size: 36px;
             padding: 35px 60px;
             border: 2px solid #ffffff;
             line-height: 1;
             text-align: center;
             max-width: 535px;
             @media (max-width: 1024px) {
-                font-size: 3rem;
+                font-size: 30px;
                 padding: 25px 30px;
                 line-height: 1.1;
             }
             @media (max-width: 767px) {
-                font-size: 1.5rem;
+                font-size: 15px;
                 padding: 15px;
             }
         }
@@ -56,7 +56,7 @@ div.select-template {
             cursor: pointer;
 
             button.select-button {
-                font-size: 1.6rem;
+                font-size: 16px;
                 visibility: hidden;
                 border: 2px solid white;
                 padding: 20px 30px;
