--- a/storage/app/public/template/meo.html
+++ b/storage/app/public/template/meo.html
@@ -1,29 +1,97 @@
-<div class="template-meo">
-    <div>ペットの種類</div>
-    <div data-field="type" data-label="ペットの種類" data-type="radio" data-options="犬,猫,鳥">type</div>
-    <div>行方が分からなくなった日時</div>
-    <div data-field="datetime" data-label="行方が分からなくなった日時" data-type="datetime">行方が分からなくなった日時</div>
-    <div>分頃 行方が分からなくなった場所</div>
-    <div data-field="address" data-label="分頃 行方が分からなくなった場所" data-type="input">address</div>
-    <div>ペットのお名前</div>
-    <div data-field="name" data-label="ペットのお名前" data-type="input">name</div>
-    <div>ペットの性別</div>
-    <div data-field="sex" data-label="ペットの性別" data-type="input">sex</div>
-    <div>ペットの年齢</div>
-    <div data-field="age" data-label="ペットの年齢" data-type="input">age</div>
-    <div>ペットの特徴・性格など </div>
-    <div data-field="age" data-label="ペットの特徴・性格など " data-type="textarea">đặc điểm về tính cách của thú</div>
-    <div>その他（失踪した経緯や状況）</div>
-    <div data-field="comment" data-label="その他（失踪した経緯や状況）" data-type="textarea">comment</div>
-    <div>飼い主様のお名前</div>
-    <div data-field="image1" data-label="飼い主様のお名前" data-type="file">image</div>
-    <img id="image1" src="https://i.kym-cdn.com/entries/icons/original/000/013/564/doge.jpg" alt="your image" />
+<div class="template-meo poster">
+    <section class="poster__row l-flex">
+        <div class="poster__pet-type js-data-bind" data-field="pet-type" data-label="ペットの種類" data-type="radio" data-options="犬,猫,鳥">犬</div>
+        <div>
+            <div class="poster__text-looking">探しています!</div>
+            <div class="poster__datetime js-data-bind" data-field="datetime-lost" data-label="行方が分からなくなった日時" data-type="datetime">
+                2017<span>年</span>
+                9<span>月</span>
+                10<span>日</span>
+                14<span>時</span>
+                00<span>分頃</span>
+            </div>
+            <div class="poster__lost-place js-data-bind" data-field="lost-place" data-label="行方が分からなくなった場所" data-type="input">渋谷区</div>
+        </div>
+    </section>
+    <section class="poster__row">
+        <section class="poster__col poster__image">
+            <div class="js-data-bind" data-field="image1" data-label="飼い主様のお名前" data-type="file"></div>
+            <img id="image1" src="https://i.kym-cdn.com/entries/icons/original/000/013/564/doge.jpg" alt="your image" />
+        </section>
+        <section class="poster__col">
+            <div class="poster__group-heading">
+                <div class="title">名前</div>
+                <div class="poster__pet-name content js-data-bind" data-field="pet-name" data-label="名前" data-type="input">こたろう</div>
+            </div>
+            <div class="poster__group-heading">
+                <div class="title">犬種</div>
+                <div class="poster__pet-breed content js-data-bind" data-field="pet-breed" data-label="犬種" data-type="input">ロングコートチワワ</div>
+            </div>
+            <div class="poster__group-heading">
+                <div class="title">性別/年齢</div>
+                <div class="poster__pet-gender-ag content js-data-bind" data-field="pet-gender-age" data-label="性別/年齢" data-type="input">オス/3歳6ヶ月</div>
+            </div>
+        </section>
+    </section>
+    <section class="poster__row">
+        <div class="poster__group-heading">
+            <div class="title">特徴・性格</div>
+            <div class="poster__pet-features-personality content js-data-bind" data-field="pet-features-personality" data-label="性別/年齢" data-type="textarea">
+                ロングコートチワワの男の子です。 人懐っこい性格、滅多に吠えたりはしません。
+            </div>
+        </div>
+    </section>
+    <section class="poster__row">
+        <div class="poster__group-heading">
+            <div class="title">その他 (失踪した状況)</div>
+            <div class="poster__notes content js-data-bind" data-field="notes" data-label="性別/年齢" data-type="textarea">
+                公園で遊んでいて、大きな音にびっくりして走り出してしまいました。 赤い首輪をしています。すぐ に探しましたが夜になっても見つけてあげられませんでした。 どんな小さな情報でも構いませんの で、 ご連絡お願いします!
+            </div>
+        </div>
+    </section>
+    <section class="poster__row">
+        <div class="poster__text-contact">見かけた方はこちらにご連絡をお願いします!</div>
+    </section>
+    <section class="poster__row l-flex">
+        <div class="poster__phone-number js-data-bind" data-field="phone-number" data-label="電話番号" data-type="input">090-XXXX-XXXX</div>
+        <div class="poster__twitter js-data-bind" data-field="twitter" data-label="ツイッター" data-type="input">kotaro1016</div>
+    </section>
+    <section class="poster__row">
+        <div class="poster__email js-data-bind" data-field="email" data-label="Eメール" data-type="input">kotaro_t@wonderful.jp</div>
+    </section>
 </div>
 
 <style>
-    .template-meo {
-        background: #ffe100;
-        padding: 10px;
+    .poster {
+        width: 820px;
+        height: 1200px;
+        background: var(--bgPoster);
+        padding: 18px;
+        margin: 0 auto;
+    }
+    .poster__row{
+        padding: 0 0 10px 0;
+    }
+    .l-flex{
+        display: flex;
+        align-items: center;
+    }
+    .poster__pet-type{
+        font-size:150px;
+        font-weight: 700;
+        color: var(--colorTxt);
+        text-shadow: 
+            5px 5px 0 #fff,
+            4px 5px 0 #000,
+            3px 5px 0 #000,
+            2px 5px 0 #000,
+            1px 5px 0 #000,
+            -1px 5px 0 #000,
+            -2px 5px 0 #000,
+            -3px 5px 0 #000,
+            -4px 5px 0 #000,
+            5px -5px 0 #fff,
+            -5px 5px 0 #fff;
     }
     img {
         width: 307px;
