--- a/resources/styles/home/_home.scss
+++ b/resources/styles/home/_home.scss
@@ -1,14 +1,8 @@
 .home {
-    &__how-to {
-        & > * {
-            display: inline-block;
-        }
-    }
-
     &__type-select {
         display: flex;
-        margin-bottom: 64px;
-        @media (max-width: 768px) {
+        margin-bottom: var(--rowSpace);
+        @media(max-width: 767px){
             flex-direction: column;
         }
     }
@@ -16,30 +10,68 @@
     &__image-button {
         position: relative;
         width: 100%;
-        height: 640px;
-        @media (max-width: 768px) {
-            height: 200px;
+
+        &:nth-child(1){
+            .type-image{
+                background-image: url("https://i.kym-cdn.com/entries/icons/original/000/035/699/pepe.jpg");
+            }
+        }
+        &:nth-child(2){
+            .type-image{
+                background-image: url("https://external-preview.redd.it/xPTu85KZxiSgka88xucW9vF5loOYdzLfgvvWWMCkVEI.jpg?auto=webp&s=6cef5f96dd4a1cb47e7b703ad674e29254e12983");
+            }
+        }
+        &:nth-child(3){
+            .type-image{
+                background-image: url("https://i.kym-cdn.com/entries/icons/original/000/013/564/doge.jpg");
+            }
+        }
+
+        .type-image{
+            padding-top: 150%;
+            background: var(--bgFirstScreen) no-repeat center/cover;
+            @media (max-width: 1200px) {
+                padding-top: 100%;
+            }
+            @media(max-width: 767px){
+                padding-top: 30%;
+            }
         }
 
         .type-content {
-            color: white;
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-        }
-
-        .center {
-            top: 50%;
-            border: 1px solid white;
-            padding: 5% 10%;
-        }
-
-        .bottom {
-            @media (max-width: 768px) {
-                visibility: hidden;
+            font-size: 34px;
+            line-height: 1;
+            font-weight: 700;
+            text-align: center;
+            &.center{
+                padding: 35px 110px;
+                border: 2px solid #ffffff;
+                margin-bottom: 95px;
+                @media(max-width: 1400px){
+                    padding: 15px 50px;
+                    margin-bottom: 40px;
+                }
+                @media(max-width: 1024px){
+                    margin-bottom: 30px;
+                    padding: 15px;
+                }
+                @media(max-width: 767px){
+                    padding: 15px 30px;
+                }
+                @media(max-width: 480px){
+                    padding: 10px 30px;
+                    margin-bottom: 10px;
+                }
             }
-            top: 65%;
+            &.bottom {
+                color: inherit;
+            }
+            @media(max-width: 1400px){
+                font-size: 25px;
+            }
+            @media(max-width: 767px){
+                font-size: 15px;
+            }
         }
 
         div.overlay {
@@ -51,29 +83,86 @@
     }
 
     &__info {
-        margin: 36px 64px 72px;
+        font-size: 26px;
+        & > *{
+            margin-bottom: var(--rowSpace2);
+        }
+        @media(max-width: 1200px){
+            font-size: 18px;  
+        }
+    }
+
+    &__how-to {
+        display: flex;
+        align-items: center;
+        margin-bottom: var(--rowSpace2);
         & > * {
-            margin-bottom: 64px;
+            display: inline-block;
+            line-height: 1;
+        }
+        h2{
+            font-size: 40px;
+            margin: 0 40px 0 0;
+        }
+        hr{
+            width: 330px;
+            margin: 0 40px 0 0;
+            opacity: 1;
+            height: 0;
+        }
+        @media(max-width: 1200px){
+            h2{
+                font-size: 30px;
+            }
+            hr{
+                width: 100px;
+            }
+        }
+        @media(max-width: 575px){
+            flex-direction: column;
+            h2{
+                margin: 0;
+            }
+            hr{
+                margin: 10px 0 20px;
+            }
         }
     }
 
     &__intro {
         white-space: pre-line;
-        line-height: 32px;
+        line-height: 2;
     }
 
     &__step {
         .title {
-            margin-bottom: 24px;
-
-            h3,
-            h4 {
-                display: inline;
-            }
-
+            margin: 0 0 55px 0;
             h3 {
-                margin-right: 12px;
+                font-size: 30px;
+                margin: 0;
+                line-height: 1;
+                display: flex;
+                align-items: center;
+                span{
+                    font-size: 40px;
+                    font-weight: inherit;
+                    margin-right: 40px;
+                }
             }
+            @media(max-width: 1200px){
+                margin: 0 0 20px 0;
+                h3{
+                    font-size: 20px;
+                    line-height: 1.2;
+                    span{
+                        font-size: 30px;
+                        margin-right: 20px;
+                    }
+                }
+            }
+        }
+        p{
+            margin: 0;
         }
     }
 }
