--- a/resources/styles/select-template/_detail.scss
+++ b/resources/styles/select-template/_detail.scss
@@ -1,31 +1,126 @@
 div.template-detail {
     &__box {
-        border: 1px solid #eeeeee;
-        padding: 20px;
-        margin-bottom: 30px;
+        padding: 0 15px;
+        margin: 0;
+        @media(max-width: 1400px){
+            padding: 0;
+        }
     }
 
     &__form {
-        border-right: 1px solid #eeeeee;
-        padding-right: 35px;
-
+        padding: 0;
+        @media(max-width: 1400px){
+            margin-bottom: 50px;
+        }
+        #formGenerate{
+            border: 2px solid #dddddd;
+            padding: 40px 90px;
+            margin: 0;
+            @media(max-width: 1400px){
+                padding: 40px 20px;
+            }
+        }
         .form-group {
-            margin-bottom: 5px !important;
-            border-bottom: 1px solid #eeeeee;
-            padding-bottom: 10px;
+            border-bottom: 1px solid #dddddd;
+            padding: 0 60px 20px;
+            margin: 0 0 20px 0;
+            @media(max-width: 1400px){
+                padding: 0 20px 20px;
+            }
+            &:last-child{
+                margin-bottom: 0;
+                border: none;
+            }
+            & > label{
+                font-size: 18px;
+                font-weight: 700;
+                margin-bottom: 10px;
+                line-height: 1;
+            }
+            .form-control {
+                border-color: var(--textColor);
+                border-radius: 0;
+                padding: 0 15px;
+                line-height: 28px;
+                font-size: 14px;
+                @media(max-width: 480px){
+                    width: 100%;
+                    max-width: 100%;
+                }
+            }
+            .group-radio{
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+            }
+            .form-check{
+                margin: 0 25px 0 0;
+                padding: 0;
+                line-height: 1;
+                .form-check-input{
+                    margin: 0;
+                    padding: 0;
+                    border-color: var(--textColor);
+                    &:checked{
+                        background-color: #fff;
+                        &:before{
+                            transform: scale(1);
+                        }
+                    }
+                    &:before{
+                        content: "";
+                        width: 12px;
+                        height: 12px;
+                        background: #000;
+                        border-radius: 50%;
+                        transform: scale(0);
+                        display: block;
+                        margin: 3px;
+                    }
+                }
+                .form-check-label{
+                    padding-left: 35px;
+                }
+            }
+            .custom-file-upload {
+                background: var(--textColor);
+                padding: 16px 55px;
+                color: #ffffff;
+                margin: 0;
+                cursor: pointer;
+            }
         }
-
-        .form-group label {
-            margin-bottom: 5px;
-        }
-
         input[type="file"] {
             display: none;
         }
     }
 
     &__sample {
-        padding-left: 35px;
+        padding: 0 90px;
+        position: relative;
+        padding-bottom: 310px;
+        @media(max-width: 1400px){
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        .c-actions{
+            background-color: #eeeeee;
+            position:absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            padding: 75px 0;
+            button{
+                padding: 15px 50px;
+                font-size: 20px;
+                border: none;
+                border-radius: 0;
+            }
+        }
+        .template-content__wrapper{
+            max-width: 100%;
+            overflow: auto;
+        }
     }
 
 }
